# vintagestory-waypoint-macros

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
macros/: 100-Waypoint POI POI.json  101-Waypoint POI Home.json  102-Waypoint POI Outpost.json  103-Waypoint POI Ruin.json  104-Waypoint POI Temporal Instability.json  105-Waypoint POI Cave.json  106-Waypoint POI Trader.json  107-Waypoint POI Lore.json  108-Waypoint Metals Metal.json  109-Waypoint Metals Copper.json  110-Waypoint Metals Tin.json  111-Waypoint Metals Lead.json  112-Waypoint Metals Gold.json  113-Waypoint Metals Silver.json  114-Waypoint Metals Zinc.json  115-Waypoint Metals Bismuth.json  116-Waypoint Metals Iron.json  117-Waypoint Metals Meteoric Iron.json  118-Waypoint Minerals Mineral.json  119-Waypoint Minerals Quartz.json  120-Waypoint Minerals Bituminous coal.json  121-Waypoint Minerals Anthracite.json  122-Waypoint Minerals Alum.json  123-Waypoint Minerals Borax.json  124-Waypoint Minerals Cinnabar.json  125-Waypoint Minerals Halite.json  126-Waypoint Minerals Sylvite.json  127-Waypoint Minerals Lapis lazuli.json  128-Waypoint Minerals Olivine.json  129-Waypoint Minerals Lignite.json  130-Waypoint Minerals Saltpeter.json  131-Waypoint Minerals Sulfur.json  132-Waypoint Grains Grain.json  133-Waypoint Grains Flax.json  134-Waypoint Grains Spelt.json  135-Waypoint Grains Rice.json  136-Waypoint Grains Rye.json  137-Waypoint Grains Sunflower.json  138-Waypoint Grains Amaranth.json  139-Waypoint Grains Cassava.json  (+47 more)
src/vs_waypoint_macros/: __init__.py  __main__.py  cli.py  generator.py  image.py  models.py  waypoints.py
